🐛 fix minor sidescroll on mobile screens

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
    align-items: center;
    color: #f9faf8;
    font-family: 'Lato', sans-serif;
+   overflow-x: hidden;
 }
 
 h1 {
